# leetcode-solutions

./: .gitignore  Makefile  README.md  go.mod  mypy.ini  pyproject.toml  readme.md
scripts/: generate_problem_list.py  gym.py
src/arrays/: pascals_triangle.py  pascals_triangle_task.py  pascals_triangle_test.py  product_of_the_last_k_numbers.py  product_of_the_last_k_numbers_test.py
src/backtracking/: restore_ip_addresses.py  restore_ip_addresses_test.py  word_search.py  word_search_test.py
src/bfs/: flood_fill.py
src/binary_search/: binary_search.py  binary_search_test.py  median_of_two_sorted_arrays.py  median_of_two_sorted_arrays_test.py  search_in_rotated_sorted_array.py  search_in_rotated_sorted_array_test.py
src/design/: design_inmemory_filesystem.py  design_inmemory_filesystem_test.py  design_parking_system.py  design_parking_system_test.py  lru_cache.py  lru_cache_test.py  min_stack.py  min_stack_test.py
src/dfs/: island_perimeter.py  max_area_of_island.py  max_area_of_island_test.py  number_of_islands.py  number_of_islands_test.py
src/dynamic_programming/: best_time_to_buy_and_sell_stock.py  best_time_to_buy_and_sell_stock_test.py  climbing_stairs.py  climbing_stairs_test.py  counting_bits.py  counting_bits_test.py  longest_common_subsequence.py  longest_common_subsequence_test.py  longest_consecutive_sequence.py  longest_consecutive_sequence_test.py  word_break.py  word_break_test.py
src/greedy/: jump_game_ii.py  jump_game_ii_test.py
src/hash_table/: find_all_duplicates_in_an_array.py  find_all_duplicates_in_an_array_test.py  three_sum.py  (+3 more)
(+176 files in other folders)
