[tool.poetry]
name = "leetcode-solutions"
version = "1.0.0"
description = "Solutions for some of the Leetcode coding problems"
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
