[project]
name = "leetcode-solutions"
version = "1.0.0"
description = "Solutions for some of the Leetcode coding problems"
authors = [
    {name = "Roman Glushko", email = "roman.glushko.m@gmail.com"},
]
dependencies = [
    "mypy>=1.13.0",
    "pyyaml>=6.0.2",
    "ruff>=0.8.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
